# AutoFlight_v1

./: .gitignore  CMakeLists.txt  README.md
AdvancedInstaller/: AutoFlight.aip  AutoFlight.back (1).aip
autoscript-examples/sensor-data/: attitude-retreival.ascr
autoscript/dronectl/: flight.py
autoscript/examples/sensor-data/: attitude-retreival.ascr
autoscript/examples/vision/: apriltags.ascr
cmake/: update_build_number.py
doc/: adding-drone-support.md
documentation/source/: buildingfromsource.rst  conf.py  gettingstarted.rst  index.rst
documentation/source/autoscript/: builtin.rst  functions.rst  index.rst  intro.rst  tutorial.rst
documentation/source/imageprocessing/: index.rst
lib/include/april/: AprilTypes.h  DebugImage.cpp  Geometry.cpp  Geometry.h  MathUtil.cpp  MathUtil.h  Refine.cpp  TagDetector.cpp  TagFamily.cpp
lib/include/ftp/: BlockingSocket.cpp  BlockingSocket.h  Definements.h  FTPClient.cpp  FTPClient.h  FTPDataTypes.cpp  FTPDataTypes.h  FTPFileStatus.cpp  FTPFileStatus.h  FTPListParse.cpp  FTPListParse.h  smart_ptr.h
src/: afconstants.h  afmainwindow.cpp  afmainwindow.h  asmainwindow.cpp  asmainwindow.h  autoflight.cpp  autoflight.h  defaultsettings.h  dronehelper.cpp  dronehelper.h  genericsettings.h  main.cpp  resources.qrc  settingshelper.cpp  settingshelper.h  soundalerts.cpp  soundalerts.h
src/autoscript/: asengine.cpp  asengine.h  asmodules.cpp  asmodules.h
src/autoscript/opencv/: asmodules_opencv.cpp  asmodules_opencv.h
src/dialogs/: bebopmediadownload.cpp  bebopmediadownload.h  configurecontrols.cpp  configurecontrols.h  dronesettings.cpp  dronesettings.cpp.todo  dronesettings.h  settingsdialog.cpp  settingsdialog.h  welcomedialog.cpp
src/imgproc/: imageprocessor.cpp  imageprocessor.h
src/imgprocui/: imagevisualizer.cpp
src/input/: controllerconfiguration.h  controllerinput.h  icontrollerinputlistener.h  manualcontrol.cpp  manualcontrol.h
src/mavlink/: mavlinkproxy.cpp  mavlinkproxy.h
src/qinterface/: qconnectionstatuslistener.h  qnavdatalistener.h  qstatuslistener.h
src/tools/: ardroneconfigurationfileio.cpp.todo  ardroneconfigurationfileio.h.todo  bebopftp.cpp  bebopftp.h  controllerconfigurationfileio.cpp  controllerconfigurationfileio.h  droneconfigurationfileio.cpp  droneconfigurationfileio.h  settingsfileio.cpp  settingsfileio.h
src/widgets/: altitude.cpp  altitude.h  battery.cpp  battery.h  connection.cpp  connection.h  flightplan.cpp  flightplan.h  gps.cpp  gps.h  map3d.cpp  map3d.h  orientation.cpp  orientation.h  signalstrength.cpp  signalstrength.h  speed.cpp  speed.h  status.cpp  status.h  videodisplay.cpp  videodisplay.h
